--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "postcss": "^8.5.6",
         "tailwindcss": "^3.4.17",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "choices.js": "^11.1.0"
     }
 }
