--- a/.env
+++ b/.env
@@ -63,4 +63,13 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+BROADCAST_DRIVER=pusher
+QUEUE_CONNECTION=database
+PUSHER_APP_ID= 2025034
+PUSHER_APP_KEY= 4a669e1829458f7dea8e
+PUSHER_APP_SECRET= cd3b9a98ba9839bbc242
+PUSHER_APP_CLUSTER= ap1
+
+
+
 VITE_APP_NAME="${APP_NAME}"
