--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
-        "choices.js": "^11.1.0"
+        "choices.js": "^11.1.0",
+        "laravel-echo": "^2.1.6",
+        "pusher-js": "^8.4.0"
     }
 }
